tests/NormalTests/paczka1/fuzzy1/44903635.err
Error in line 4: A24 S42 #9,8
Error in line 7: A24 S42 63,7
Error in line 5: bnB5cHF A24 9,5
Error in line 2: Shnc2lvQW S42 67,5
Error in line 12: BHsRYr A24 73,7
Error in line 16: Shnc2lvQW A24 78,0
Error in line 18: BHsRYr S428 66,3
Error in line 10: A24 A24 43,5
Error in line 32: A24 A821 74,5
Error in line 36: A24 A24 22,9
Error in line 33: BHsRYr A821 96,0
